package cl.ucn.disc.arqsist.library.dao;

import cl.ucn.disc.arqsist.library.model.Book;

/**
 * DAO contract for the Book entity.
 * Entity-specific queries can be added here without exposing ORMLite.
 */
public interface BookDao extends CrudDao<Book> {
}
