package cl.ucn.disc.arqsist.library.dao;

import cl.ucn.disc.arqsist.library.model.Loan;

/**
 * DAO contract for the Loan entity.
 */
public interface LoanDao extends CrudDao<Loan> {
}
