package cl.ucn.disc.arqsist.library.dao;

import cl.ucn.disc.arqsist.library.model.Member;

/**
 * DAO contract for the Member entity.
 */
public interface MemberDao extends CrudDao<Member> {
}
