package cl.ucn.disc.arqsist.library.dao;

import cl.ucn.disc.arqsist.library.model.Reservation;

/**
 * DAO contract for the Reservation entity.
 */
public interface ReservationDao extends CrudDao<Reservation> {
}
