package cl.ucn.disc.arqsist.library.service;

import cl.ucn.disc.arqsist.library.dao.BookDao;
import cl.ucn.disc.arqsist.library.dao.LoanDao;
import cl.ucn.disc.arqsist.library.model.Book;
import cl.ucn.disc.arqsist.library.model.Loan;

import java.time.LocalDate;
import java.time.temporal.ChronoUnit;
import java.util.List;

public final class LoanService {

    public static final int DUE_DAYS = 21;

    private final LoanDao loanDao;
    private final BookDao bookDao;

    public LoanService(LoanDao loanDao, BookDao bookDao) {
        this.loanDao = loanDao;
        this.bookDao = bookDao;
    }

    public List<Loan> findAll() {
        return loanDao.findAll();
    }

    public Loan returnLoan(int loanId) {
        Loan loan = loanDao.findById(loanId);
        if (loan == null || loan.isReturned()) {
            return loan;
        }

        loan.setReturned(true);
        loan.setReturnDate(LocalDate.now().toString());

        LocalDate due = LocalDate.parse(loan.getDueDate());
        LocalDate today = LocalDate.now();
        if (today.isAfter(due)) {
            long daysOverdue = ChronoUnit.DAYS.between(due, today);
            loan.setOverdueFee(daysOverdue * 1.0);
        }

        loanDao.update(loan);

        Book book = loan.getBook();
        book.setAvailableCopies(book.getAvailableCopies() + 1);
        bookDao.update(book);

        return loan;
    }

    public List<Loan> overdueLoans() {
        return loanDao.findAll().stream().filter(Loan::isOverdue).toList();
    }
}
